<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prefs_lightning_ambient_factor"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/prefs_lightning_ambient_factor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prefs_lightning_diffuse_factor"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/prefs_lightning_diffuse_factor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prefs_lightning_specular_factor"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/prefs_lightning_specular_factor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        style="@style/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_normal"
        android:orientation="vertical" >

        <TextView
            style="@style/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prefs_lightning_shininess"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/prefs_lightning_shininess"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

</LinearLayout>