<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_header"
        android:padding="5dp" >

        <TextView
            android:id="@+id/text_title"
            style="@style/textShadow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_info"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_title"
            android:text="Current shader info text."
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_menu"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/button_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/header" >

        <android.opengl.GLSurfaceView
            android:id="@+id/glsurfaceview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_menu"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/button_preferences"
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/button_preferences" />

            <Button
                android:id="@+id/button_about"
                style="@style/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_about" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>